# picire

./: .gitignore  .pylintrc  .travis.yml  LICENSE.md  LICENSE.rst  MANIFEST.in  README.md  README.rst  RELNOTES.rst  setup.cfg  setup.py  tox.ini
.github/workflows/: main.yml
picire/: VERSION  __init__.py  __main__.py  abstract_dd.py  abstract_parallel_dd.py  cache.py  cli.py  combined_iterator.py  combined_parallel_dd.py  config_iterators.py  config_splitters.py  dd.py  global_structures.py  iterator.py  light_dd.py  limit_reduction.py  logging.py  outcome.py  outcome_cache.py  parallel_dd.py  parallel_loop.py  shared_cache.py  subprocess_test.py
src/picire/: __init__.py  __main__.py  cli.py  exception.py  outcome.py  parallel_dd.py  splitter.py  subprocess_test.py
tests/: common.py  test_api.py  test_cli.py
tests/resources/: exp-extra-comma.json  exp-sumprod10-prod.py  exp-sumprod10-sum.py  inp-extra-comma.json  inp-invalid-escape.json  inp-sumprod10.py  sut-json-load.py  test-json-extra-comma.bat  test-json-extra-comma.sh  test-json-invalid-escape.bat  test-json-invalid-escape.sh  test-sumprod10-prod.bat  test-sumprod10-prod.sh  test-sumprod10-sum.bat  test-sumprod10-sum.sh
