[metadata]
name = picire
description = Picire Parallel Delta Debugging Framework
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Renata Hodovan, Akos Kiss
author_email = hodovan@inf.u-szeged.hu, akiss@inf.u-szeged.hu
url = https://github.com/renatahodovan/picire
license = BSD
license_file = LICENSE.rst
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Testing
platform = any

[options]
packages = find:
python_requires = >=3.5
install_requires =
    chardet
    inators
    psutil
    setuptools

[options.entry_points]
console_scripts =
    picire = picire.cli:execute
