[metadata]
name = picire
description = Picire Parallel Delta Debugging Framework
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Renata Hodovan, Akos Kiss
author_email = hodovan@inf.u-szeged.hu, akiss@inf.u-szeged.hu
url = https://github.com/renatahodovan/picire
license_expression = BSD-3-Clause
license_files = LICENSE.rst
classifiers =
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Topic :: Software Development :: Testing
platform = any

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    chardet
    inators

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    picire = picire.cli:execute
